# cover-letter-generator

./: README.md  pyproject.toml  requirements.txt
cover_letter_generator/: main.py
